Урок 2. Попытался реализовать автоматическую смену темы по низкому заряду батареи (сейчас только она не деприкейтед). Поигрался немного с дизайном.

--- a/app/src/main/res/layout/fragment_chips.xml
+++ b/app/src/main/res/layout/fragment_chips.xml
@@ -23,6 +23,7 @@
             style="@style/Widget.MaterialComponents.Chip.Entry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:theme="@style/MarsTheme"
             android:text="@string/entry"
             />
 
@@ -30,6 +31,7 @@
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:theme="@style/MarsTheme"
             android:text="@string/choice"
             />
 
@@ -37,6 +39,7 @@
             style="@style/Widget.MaterialComponents.Chip.Action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:theme="@style/MarsTheme"
             android:text="@string/action"
             />
 
@@ -44,6 +47,7 @@
             style="@style/Widget.MaterialComponents.Chip.Filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:theme="@style/MarsTheme"
             android:text="@string/filter"
             />
     </LinearLayout>
@@ -238,6 +242,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:orientation="vertical">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -381,6 +388,7 @@
                     android:text="@string/card" />
             </com.google.android.material.card.MaterialCardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
     </LinearLayout>
 </LinearLayout>
 
