--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -6,10 +6,9 @@
     android:id="@+id/bottom_sheet_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bottom_sheet_container_background_color"
-
     app:behavior_hideable="true"
     app:behavior_peekHeight="@dimen/behavior_peek_height"
+    android:background="@color/white"
 
     android:visibility="visible"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
@@ -19,19 +18,13 @@
         android:layout_width="@dimen/bottom_sheet_view_layout_width"
         android:layout_height="@dimen/bottom_sheet_view_layout_height"
         android:layout_marginTop="@dimen/bottom_sheet_view_margin_top"
-        android:background="@color/bottom_sheet_view_background_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/bottomSheetDescriptionHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/bottom_sheet_header_margin_top"
-        android:paddingStart="@dimen/bottom_sheet_header_padding_start"
-        android:paddingEnd="@dimen/bottom_sheet_header_padding_end"
-        android:textColor="@color/bottom_sheet_header_text_color"
+        style="@style/title_text_style"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,10 +33,7 @@
 
     <TextView
         android:id="@+id/bottomSheetDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/bottom_sheet_text_body_padding_"
-        android:paddingEnd="@dimen/bottom_sheet_text_body_padding_end"
+        style="@style/body_text_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottomSheetDescriptionHeader"
