--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -39,12 +39,17 @@
         android:layout_height="wrap_content"
         android:text="@string/night_mode" />
 
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/autoSwitchNightMod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/auto_night_mode" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/apply_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/apply" />
-
 
 </LinearLayout>
