--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
 
     <color name="bottom_sheet_container_background_color">#f6f6fa</color>
     <color name="bottom_sheet_view_background_color">#663b4351</color>
-    <color name="bottom_sheet_header_text_color">#000</color>
+    <color name="bottom_sheet_header_text_color">@android:color/black</color>
 
     <color name="primary_text_color">@android:color/black</color>
     <color name="secondary_text_color">@android:color/white</color>
@@ -30,7 +30,11 @@
     <color name="moon_secondary_color">#757575</color>
     <color name="moon_secondary_dark_color">#494949</color>
     <color name="moon_secondary_light_color">#a4a4a4</color>
-    <color name="moon_background_color">#607d8b</color>
+
+    <color name="moon_control_activated_color">#E1ED5C</color>
+    <color name="moon_track_tint_color">#99A140</color>
+
+    <color name="moon_background_color">#DFDA9D</color>
 
     <color name="moon_primary_night_color">#353535</color>
     <color name="moon_primary_dark_night_color">#0f0f0f</color>
@@ -47,9 +51,10 @@
     <color name="mars_secondary_color">#ff5722</color>
     <color name="mars_secondary_dark_color">#c41c00</color>
     <color name="mars_secondary_light_color">#ff8a50</color>
-    <color name="mars_background_color">#dd2c00</color>
     <color name="mars_primary_text_color">#721200</color>
     <color name="mars_secondary_text_color">#fffbf1</color>
+
+    <color name="mars_background_color">#DFBCA9</color>
 
     <color name="mars_primary_night_color">#842a00</color>
     <color name="mars_primary_dark_night_color">#530000</color>
