--- a/app/src/main/res/layout/fragment_chips.xml
+++ b/app/src/main/res/layout/fragment_chips.xml
@@ -2,9 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundAppThemeColor"
     >
 
     <LinearLayout
@@ -20,34 +22,30 @@
             />
 
         <com.google.android.material.chip.Chip
-            style="@style/Widget.MaterialComponents.Chip.Entry"
+            style="@style/AppChipChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/MarsTheme"
             android:text="@string/entry"
             />
 
         <com.google.android.material.chip.Chip
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/AppChipChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/MarsTheme"
             android:text="@string/choice"
             />
 
         <com.google.android.material.chip.Chip
-            style="@style/Widget.MaterialComponents.Chip.Action"
+            style="@style/AppChipAction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/MarsTheme"
             android:text="@string/action"
             />
 
         <com.google.android.material.chip.Chip
-            style="@style/Widget.MaterialComponents.Chip.Filter"
+            style="@style/AppChipFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/MarsTheme"
             android:text="@string/filter"
             />
     </LinearLayout>
@@ -66,11 +64,10 @@
             />
 
         <com.google.android.material.chip.Chip
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/AppChipChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ripple_color"
-            app:rippleColor="@android:color/holo_orange_dark"
             />
 
         <com.google.android.material.chip.Chip
@@ -129,21 +126,21 @@
         >
 
         <com.google.android.material.chip.Chip
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/AppChipChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/choice_a"
             />
 
         <com.google.android.material.chip.Chip
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/AppChipChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/choice_b"
             />
 
         <com.google.android.material.chip.Chip
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/AppChipChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/choice_c"
@@ -164,63 +161,63 @@
             >
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/chip"
                 />
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/group"
                 />
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/in"
                 />
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/single"
                 />
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/line"
                 />
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/add"
                 />
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/a"
                 />
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/horizontal"
                 />
 
             <com.google.android.material.chip.Chip
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+                style="@style/AppChipChoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/scroll"
@@ -230,7 +227,7 @@
 
     <com.google.android.material.chip.Chip
         android:id="@+id/chipClose"
-        style="@style/Widget.MaterialComponents.Chip.Entry"
+        style="@style/AppChipEntry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -240,87 +237,65 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/chips_fr_margin_top"
         android:orientation="vertical">
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:ignore="UselessParent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
-            android:paddingBottom="16dp">
+            android:paddingBottom="@dimen/chips_fr_padding_bottom">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/raisedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/material_components_chip_fragment_style"
                 android:text="@string/raised_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/unelevatedButton"
-                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/unelevatedButton_chip_fragment_style"
                 android:text="@string/unelevated_button"
                 app:layout_constraintStart_toEndOf="@id/raisedButton"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/outlinedButton"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/outlinedButton_chip_fragment_style"
                 android:text="@string/outlined_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/raisedButton" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/textButton"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/textButton_chip_fragment_style"
                 android:text="@string/text_button"
                 app:layout_constraintStart_toEndOf="@id/outlinedButton"
                 app:layout_constraintTop_toBottomOf="@id/raisedButton" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/checkBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/material_components_chip_fragment_style"
                 android:text="@string/checkbox"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textButton" />
 
             <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/radioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/material_components_chip_fragment_style"
                 android:text="@string/radio_button"
                 app:layout_constraintStart_toEndOf="@id/checkBox"
                 app:layout_constraintTop_toBottomOf="@id/textButton" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/switchMaterial"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/material_components_chip_fragment_style"
+                android:theme="@style/SwitchStyle"
                 android:text="@string/switch_component"
                 app:layout_constraintStart_toEndOf="@id/radioButton"
                 app:layout_constraintTop_toBottomOf="@id/textButton" />
@@ -328,9 +303,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/filledBoxTextField"
                 android:layout_width="240dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/material_components_chip_fragment_style"
                 android:hint="@string/filled_box_text_field"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/checkBox">
@@ -343,11 +316,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/outlinedBoxTextField"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="240dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                style="@style/outlinedBox_chip_fragment_style"
                 android:hint="@string/outlined_box_text_field"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/filledBoxTextField">
@@ -361,10 +330,8 @@
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigation"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                style="@style/material_components_chip_fragment_style"
+                android:layout_marginEnd="@dimen/chips_fr_margin_end"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/outlinedBoxTextField"
@@ -374,9 +341,8 @@
                 android:id="@+id/card"
                 android:layout_width="0dp"
                 android:layout_height="160dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                style="@style/material_components_chip_fragment_style"
+                android:layout_marginEnd="@dimen/chips_fr_margin_end"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/bottomNavigation">
