Урок 2. Для переключателей во фрагменте настройки сделали один слушатель. Переделан алгоритм выбора режима день/ночь/авто.

--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/bottomSheetDescriptionHeader"
-        style="@style/title_text_style"
+        style="@style/TitleTextStyle"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/bottomSheetDescription"
-        style="@style/body_text_style"
+        style="@style/BodyTextStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottomSheetDescriptionHeader"
