--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -10,5 +10,6 @@
     <attr name="appSwitchActiveColor" format="reference"/>
     <attr name="appSwitchNoActiveColor" format="reference"/>
     <attr name="appSwitchTintColor" format="reference"/>
+    <attr name="appCardViewBackgroundColor" format="reference"/>
 
 </resources>
