--- a/app/src/main/res/layout/fragment_chips.xml
+++ b/app/src/main/res/layout/fragment_chips.xml
@@ -252,58 +252,59 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/raisedButton"
-                style="@style/material_components_chip_fragment_style"
+                style="@style/MaterialComponentsChipFragmentStyle"
                 android:text="@string/raised_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/unelevatedButton"
-                style="@style/unelevatedButton_chip_fragment_style"
+                style="@style/UnelevatedButtonChipFragmentStyle"
                 android:text="@string/unelevated_button"
                 app:layout_constraintStart_toEndOf="@id/raisedButton"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/outlinedButton"
-                style="@style/outlinedButton_chip_fragment_style"
+                style="@style/OutlinedButtonChipFragmentStyle"
                 android:text="@string/outlined_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/raisedButton" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/textButton"
-                style="@style/textButton_chip_fragment_style"
+                style="@style/TextButtonChipFragmentStyle"
                 android:text="@string/text_button"
                 app:layout_constraintStart_toEndOf="@id/outlinedButton"
                 app:layout_constraintTop_toBottomOf="@id/raisedButton" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/checkBox"
-                style="@style/material_components_chip_fragment_style"
+                style="@style/MaterialComponentsChipFragmentStyle"
                 android:text="@string/checkbox"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textButton" />
 
             <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/radioButton"
-                style="@style/material_components_chip_fragment_style"
+                style="@style/MaterialComponentsChipFragmentStyle"
                 android:text="@string/radio_button"
                 app:layout_constraintStart_toEndOf="@id/checkBox"
                 app:layout_constraintTop_toBottomOf="@id/textButton" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/switchMaterial"
-                style="@style/material_components_chip_fragment_style"
-                android:theme="@style/SwitchStyle"
+                style="@style/MaterialComponentsChipFragmentStyle"
+                android:minHeight="@dimen/minHeightSettingSwitch"
                 android:text="@string/switch_component"
+                android:theme="@style/SwitchStyle"
                 app:layout_constraintStart_toEndOf="@id/radioButton"
                 app:layout_constraintTop_toBottomOf="@id/textButton" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/filledBoxTextField"
                 android:layout_width="240dp"
-                style="@style/material_components_chip_fragment_style"
+                style="@style/MaterialComponentsChipFragmentStyle"
                 android:hint="@string/filled_box_text_field"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/checkBox">
@@ -316,7 +317,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/outlinedBoxTextField"
-                style="@style/outlinedBox_chip_fragment_style"
+                style="@style/OutlinedBoxChipFragmentStyle"
                 android:hint="@string/outlined_box_text_field"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/filledBoxTextField">
@@ -330,7 +331,7 @@
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigation"
                 android:layout_width="0dp"
-                style="@style/material_components_chip_fragment_style"
+                style="@style/MaterialComponentsChipFragmentStyle"
                 android:layout_marginEnd="@dimen/chips_fr_margin_end"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -341,7 +342,8 @@
                 android:id="@+id/card"
                 android:layout_width="0dp"
                 android:layout_height="160dp"
-                style="@style/material_components_chip_fragment_style"
+                style="@style/MaterialComponentsChipFragmentStyle"
+                android:theme="@style/AppCard"
                 android:layout_marginEnd="@dimen/chips_fr_margin_end"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
