--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -10,7 +10,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
-            style="@style/constraint_layout_style">
+            style="@style/ConstraintLayoutStyle">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout"
@@ -117,7 +117,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/image_title_description"
-                style="@style/title_text_style"
+                style="@style/TitleTextStyle"
                 app:layout_constraintBottom_toTopOf="@id/image_description"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/image_description"
-                style="@style/body_text_style"
+                style="@style/BodyTextStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image_title_description"/>
