--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="title_text_style" parent="Widget.AppCompat.TextView">
+    <style name="TitleTextStyle" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/fragment_POD_margin_top</item>
@@ -11,7 +11,7 @@
         <item name="android:textColor">?attr/textColorTitle</item>
     </style>
 
-    <style name="body_text_style">
+    <style name="BodyTextStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/fragment_POD_margin_top</item>
@@ -21,7 +21,7 @@
         <item name="android:textColor">?attr/textColorBody</item>
     </style>
 
-    <style name="constraint_layout_style">
+    <style name="ConstraintLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">?attr/backgroundAppThemeColor</item>
@@ -29,7 +29,7 @@
         <item name="paddingEnd">@dimen/fragment_POD_padding_end</item>
     </style>
 
-    <style name="material_components_chip_fragment_style">
+    <style name="MaterialComponentsChipFragmentStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/chips_fr_margin_start</item>
@@ -45,28 +45,28 @@
         <item name="trackTint">?attr/appSwitchTintColor</item>
     </style>
 
-    <style name="outlinedButton_chip_fragment_style" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="OutlinedButtonChipFragmentStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/chips_fr_margin_start</item>
         <item name="android:layout_marginTop">@dimen/chips_fr_margin_top</item>
     </style>
 
-    <style name="unelevatedButton_chip_fragment_style" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+    <style name="UnelevatedButtonChipFragmentStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/chips_fr_margin_start</item>
         <item name="android:layout_marginTop">@dimen/chips_fr_margin_top</item>
     </style>
 
-    <style name="textButton_chip_fragment_style" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="TextButtonChipFragmentStyle" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/chips_fr_margin_start</item>
         <item name="android:layout_marginTop">@dimen/chips_fr_margin_top</item>
     </style>
 
-    <style name="outlinedBox_chip_fragment_style" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="OutlinedBoxChipFragmentStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">240dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/chips_fr_margin_start</item>
@@ -112,7 +112,7 @@
 
     <style name="AppCard" parent="Widget.MaterialComponents.CardView">
         <item name="cardElevation">8dp</item>
-        <item name="cardBackgroundColor">@color/mars_secondary_light_color</item>
+        <item name="cardBackgroundColor">?attr/appCardViewBackgroundColor</item>
     </style>
 
 </resources>
