--- a/app/src/main/res/menu/menu_bottom_bar.xml
+++ b/app/src/main/res/menu/menu_bottom_bar.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/app_bar_fav"
         android:icon="@drawable/ic_favourite_menu"
-        android:title="@string/favourite"
+        android:title="@string/favorite"
         app:showAsAction="ifRoom" />
 
     <item
