--- a/app/src/main/res/menu/menu_bottom_bar_setting_fragment.xml
+++ b/app/src/main/res/menu/menu_bottom_bar_setting_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/app_favorite"
+        android:id="@+id/app_bar_favorite"
         android:icon="@drawable/ic_favourite_menu"
         android:title="@string/favorite"
         app:showAsAction="ifRoom" />
