--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/app_bar_telescope"
+        android:icon="@drawable/ic_telescope"
+        android:title="@string/picture_of_nasa"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/app_bar_favorite"
         android:icon="@drawable/ic_favourite_menu"
         android:title="@string/favorite"
@@ -14,3 +20,4 @@
         android:title="@string/settings"
         app:showAsAction="ifRoom" />
 </menu>
+
