--- a/app/src/main/res/layout/fragment_picture_of_the_day_view_pager.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day_view_pager.xml
@@ -22,6 +22,7 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/bottom_nav_margin_top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
