--- a/app/src/main/res/layout/fragment_constraint_layout.xml
+++ b/app/src/main/res/layout/fragment_constraint_layout.xml
@@ -4,6 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/vertical_barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="right"
+        app:constraint_referenced_ids="materialButton2"
+        />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/horizontal_barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="materialButton2"
+        />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/materialButton2"
         android:layout_width="0dp"
@@ -18,14 +34,14 @@
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintWidth_percent="0.4" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintVertical_chainStyle="packed"
 
         android:text="@string/constraint_layout"
 
@@ -60,5 +76,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_center"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/constraint_layout"
+
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/vertical_barrier"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_barrier"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
